--- a/views/login.html
+++ b/views/login.html
@@ -40,9 +40,9 @@
         </header>
         <main class="login">
             <form action="/" method="POST">
-                <input type="text" name="user" placeholder="Nombre de usuario">
-                <input type="password" name="pass" placeholder="Elegí tu contraseña">
-                <input type="submit" value="Enviar">
+                <input type="text" name="user" placeholder="Nombre de usuario" class="control-login">
+                <input type="password" name="pass" placeholder="Elegí tu contraseña" class="control-login">
+                <input type="submit" value="Enviar" class="button-login">
             </form>
         </main>
         <footer>
